More anonymous schema fixes
